Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.9
-
None
-
52dd3994e (dev)
Description
When trying to add windows-11_23H2-msvc2022-developer-build (https://codereview.qt-project.org/c/qt/qt5/+/567093/6 ) build fails on qtopcua:
agent:2024/08/12 20:15:37 build.go:404: FAILED: src/opcua/CMakeFiles/OpcUa.dir/RelWithDebInfo/client/qopcuagdsclient.cpp.obj agent:2024/08/12 20:15:37 build.go:404: sccache C:\PROGRA~1\MICROS~3\2022\PROFES~1\VC\Tools\MSVC\1439~1.335\bin\Hostx64\x64\cl.exe /nologo /TP -DNOMINMAX -DOpcUa_EXPORTS -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_OPCUA_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_LEAN_HEADERS=1 -DQT_MOC_COMPAT -DQT_NETWORK_LIB -DQT_NO_AS_CONST=1 -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT=1 -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_STRICT_QLIST_ITERATORS -DQT_USE_QSTRINGBUILDER -DUNICODE -DWIN32 -DWIN64 -D_CRT_SECURE_NO_WARNINGS -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_USE_MATH_DEFINES -D_WIN64 -D_WINDLL -DCMAKE_INTDIR=\"RelWithDebInfo\" -IC:\Users\qt\work\qt\qtopcua_build\src\opcua\OpcUa_autogen\include_RelWithDebInfo -IC:\Users\qt\work\qt\qtopcua_build\include -IC:\Users\qt\work\qt\qtopcua_build\include\QtOpcUa -IC:\Users\qt\work\qt\qtopcua\src\opcua -IC:\Users\qt\work\qt\qtopcua_build\src\opcua -IC:\Users\qt\work\qt\qtopcua_build\include\QtOpcUa\6.9.0 -IC:\Users\qt\work\qt\qtopcua_build\include\QtOpcUa\6.9.0\QtOpcUa -external:IC:\Users\qt\work\install\include\QtCore -external:IC:\Users\qt\work\install\include -external:IC:\Users\qt\work\install\mkspecs\win32-msvc -external:IC:\Users\qt\work\install\include\QtNetwork -external:IC:\Users\qt\work\install\include\QtCore\6.9.0 -external:IC:\Users\qt\work\install\include\QtCore\6.9.0\QtCore -external:IC:\Users\qt\work\install\include\QtNetwork\6.9.0 -external:IC:\Users\qt\work\install\include\QtNetwork\6.9.0\QtNetwork -external:IC:\openssl\include -external:W0 /DWIN32 /D_WINDOWS /GR /Z7 /DNDEBUG -O2 -Ob3 -std:c++20 -MD /W3 /EHs-c- /wd4530 /wd4577 /constexpr:steps3500000 -Zc:__cplusplus -permissive- -utf-8 /WX -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:ternary -Zc:externConstexpr -Zc:wchar_t -bigobj -guard:cf -Gw /showIncludes /Fosrc\opcua\CMakeFiles\OpcUa.dir\RelWithDebInfo\client\qopcuagdsclient.cpp.obj /Fdsrc\opcua\CMakeFiles\OpcUa.dir\RelWithDebInfo\ /FS -c C:\Users\qt\work\qt\qtopcua\src\opcua\client\qopcuagdsclient.cpp agent:2024/08/12 20:15:37 build.go:404: C:\Users\qt\work\qt\qtopcua\src\opcua\client\qopcuagdsclient.cpp(676): error C2220: the following warning is treated as an error agent:2024/08/12 20:15:37 build.go:404: C:\Users\qt\work\qt\qtopcua\src\opcua\client\qopcuagdsclient.cpp(676): warning C4996: 'QT_OPCUA_GDSCLIENT': Use Q_STATIC_LOGGING_CATEGORY or add either Q_DECLARE_LOGGING_CATEGORY or QT_DECLARE_EXPORTED_QT_LOGGING_CATEGORY in a header
Full log: https://testresults.qt.io/coin/api/log/qt/qtopcua/1983597a7bc1665e63497e17340973fc60ecf0cd/WindowsWindows_11_23H2x86_64WindowsWindows_11_23H2x86_64MSVC2022qtci-windows-11_23H2-x86_64-52-cec55cDebugAndRelease_Sccache_UseConfigure_WarningsAreErrors/adf286560151bda773ac75f5bb33463d7dbea29c/build_1723491003/log.txt.gz
Integration: https://testresults.qt.io/coin/integration/qt/qt5/tasks/web_qt_qt5_1723490270202
Attachments
Issue Links
- blocks
-
QTBUG-127127 Dev / 6.8 branches of qt5.git have no platform configurations building examples for Windows MSVC
- Closed