Remove usage of deprecated logging API

Change-Id: I68c0e86ef33acae233688a55fb9f552d42b106be
Task-number: QTBUG-127974
Reviewed-by: Frank Meerkoetter <frank.meerkoetter@basyskom.com>